# ros-chat-app

./: Dockerfile  compose.yml  howtorun
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/comm/: msg.h  msgRequest.h  msgResponse.h
devel/lib/comm/: node1  node2
devel/lib/pkgconfig/: comm.pc
devel/lib/python3/dist-packages/comm/srv/: _msg.py
devel/share/comm/cmake/: commConfig.cmake
devel/share/common-lisp/ros/comm/srv/: _package.lisp  _package_msg.lisp  comm-srv.asd  msg.lisp
devel/share/gennodejs/ros/comm/srv/: msg.js
devel/share/roseus/ros/comm/: manifest.l
devel/share/roseus/ros/comm/srv/: msg.l
src/comm/: CMakeLists.txt
src/comm/launch/: chatsys.launch
src/comm/src/: node1.cpp  node2.cpp
src/comm/srv/: msg.srv
